tests/snapshots/cli_help__cli_help_lists_move.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Put lists in a folder (made if it's new), or take them out of theirs

Usage: ms-todo lists move [OPTIONS] <--folder <FOLDER>|--no-folder> <LIST>...

Arguments:
  <LIST>...  The lists, by exact name or ID; several move together. `-` reads IDs from stdin, one per line

Options:
      --folder <FOLDER>        The folder to put them in. A folder that exists matches ignoring case; any other name makes a new one
      --format <FORMAT>        Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>        Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --no-folder              Take them out of their folder
      --dry-run                Show what would change without changing anything
      --fresh                  Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --idempotency-key <KEY>  Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2
      --quiet                  Print nothing on stderr but errors: no notes and no progress
      --no-color               No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>    Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                   Print help
  -V, --version                Print version
