tests/snapshots/cli_help__cli_help_lists_rename.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Rename a list. The default list (Tasks) and Flagged Emails can't be

Usage: ms-todo lists rename [OPTIONS] <LIST> <NAME>

Arguments:
  <LIST>  The list's exact name or its ID
  <NAME>  Its new name, which no other list may have

Options:
      --dry-run                Show what would change without changing anything
      --format <FORMAT>        Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --idempotency-key <KEY>  Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2
      --instance <NAME>        Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                  Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                  Print nothing on stderr but errors: no notes and no progress
      --no-color               No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>    Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                   Print help
  -V, --version                Print version
