tests/snapshots/cli_help__cli_help_myday.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Plan today: the tasks in My Day, what could go in it, and taking them in and out. A task with no due date is due today while it's there, so the To Do app shows it in its own My Day too

Usage: ms-todo myday [OPTIONS] <COMMAND>

Commands:
  list      Today's My Day, open tasks first. The day starts at `my_day.rollover_time` (00:00 unless config.toml says otherwise)
  add       Put tasks in today's My Day. One with no due date is due today too, until it leaves My Day
  remove    Take tasks out of My Day, and the due date My Day gave them if nobody has changed it since
  suggest   Open tasks that could go in today's My Day: due today, overdue, and those left from an earlier My Day
  rollover  Take every task out of an earlier day's My Day now, as the daemon does each day at `my_day.rollover_time`
  help      Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
