tests/snapshots/cli_help__cli_help_myday_rollover.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Take every task out of an earlier day's My Day now, as the daemon does each day at `my_day.rollover_time`

Usage: ms-todo myday rollover [OPTIONS]

Options:
      --dry-run              Show what would change without changing anything
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
